# git-netis

./: README.md  git-netis.cabal  package.yaml  stack.yaml
app/: Main.hs
app/GitNetis/: App.hs
app/GitNetis/App/: Bitbucket.hs  Env.hs  Git.hs  Internal.hs  JIRA.hs  Util.hs
src/GitNetis/: Git.hs  JIRA.hs  Resource.hs  Util.hs
src/GitNetis/JIRA/: Auth.hs  Resource.hs
src/GitNetis/Resource/: Auth.hs  Bitbucket.hs  JIRA.hs
test/: Spec.hs  TestConfig.json
test/GitNetis/Test/: Git.hs  JIRA.hs  TestConfig.hs
test/GitNetis/Test/JIRA/: Auth.hs
test/GitNetis/Test/Resource/: Bitbucket.hs  JIRA.hs
