name:                git-netis
version:             0.1.0.0
synopsis:            (Internal project!) Manage issues, branches and everything.
description:         Please see README.md
homepage:            https://git.dev.netis.com/users/kenneth.zhao/repos/git-netis
license:             AllRightsReserved
license-file:        LICENSE
author:              Kenneth Zhao
maintainer:          kenneth.zhao@netis.com.cn
copyright:           2016 Kenneth Zhao
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GitNetis.Git
                     , GitNetis.Resource
                     , GitNetis.Resource.Auth
                     , GitNetis.Resource.Bitbucket
                     , GitNetis.Resource.JIRA
  build-depends:       aeson >= 0.11
                     , base >= 4.7 && < 5
                     , base64-bytestring >= 1.0
                     , bytestring >= 0.10
                     , exceptions >= 0.8
                     , http-client >= 0.4
                     , http-types >= 0.9
                     , lens >= 4.13
                     , mtl >= 2.2
                     , network-uri >= 2.6
                     , process >= 1.2
                     , text >= 1.2
                     , vector >= 0.11
                     , wreq >= 0.4
  default-language:    Haskell2010

executable git-netis
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       GitNetis.App
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , git-netis
                     , exceptions >= 0.8
                     , optparse-applicative >= 0.12
                     , mtl >= 2.2
                     , text >= 1.2
  default-language:    Haskell2010

test-suite git-netis-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       GitNetis.Test.Git
                     , GitNetis.Test.Resource.JIRA
                     , GitNetis.Test.Resource.Bitbucket
                     , GitNetis.Test.TestConfig
  build-depends:       aeson >= 0.11
                     , base
                     , git-netis
                     , bytestring >= 0.10
                     , exceptions >= 0.8
                     , mtl >= 2.2
                     , tasty >= 0.11
                     , tasty-smallcheck
                     , tasty-quickcheck
                     , tasty-hunit
                     , text >= 1.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://kenneth.zhao@git.dev.netis.com/scm/~kenneth.zhao/git-netis.git
